@@ -6,17 +6,20 @@
 
 package net.dries007.tfc.config;
 
-import java.util.EnumMap;
 import java.util.List;
+import java.util.Map;
 import java.util.function.Supplier;
 
 import net.dries007.tfc.common.blocks.plant.fruit.FruitBlocks;
 import net.dries007.tfc.common.blocks.wood.Wood;
 import net.dries007.tfc.common.component.size.Size;
+import net.dries007.tfc.common.fluids.FluidHelpers;
 import net.dries007.tfc.config.animals.MammalConfig;
 import net.dries007.tfc.config.animals.OviparousAnimalConfig;
 import net.dries007.tfc.config.animals.ProducingMammalConfig;
 import net.dries007.tfc.util.FluidAlloy;
+import net.dries007.tfc.util.Helpers;
+import net.dries007.tfc.util.calendar.ICalendar;
 
 /**
  * Server Config
@@ -146,11 +149,10 @@ public class ServerConfig extends BaseConfig
     // Blocks - Hot Water
     public final Supplier<Double> hotWaterHealAmount;
     // Blocks - Sapling
-    public final Supplier<Double> globalSaplingGrowthModifier;
-    public final Supplier<Double> globalFruitSaplingGrowthModifier;
-    public final EnumMap<Wood, Supplier<Integer>> saplingGrowthDays;
-    public final EnumMap<FruitBlocks.Tree, Supplier<Integer>> fruitSaplingGrowthDays;
-    public final Supplier<Integer> bananaSaplingGrowthDays;
+    public final Supplier<Double> saplingGrowthModifier;
+    public final Map<Wood, Supplier<Integer>> saplingGrowthTicks;
+    public final Map<FruitBlocks.Tree, Supplier<Integer>> fruitSaplingGrowthTicks;
+    public final Supplier<Integer> bananaSaplingGrowthTicks;
     // Blocks - Crops
     public final Supplier<Double> cropGrowthModifier;
     public final Supplier<Double> cropExpiryModifier;
@@ -192,8 +194,12 @@ public class ServerConfig extends BaseConfig
     public final Supplier<Double> volcanicGlassBottleBreakChance;
     public final Supplier<Integer> olivineGlassBottleCapacity;
     public final Supplier<Double> olivineGlassBottleBreakChance;
-    // Items - Wooden Bucket
+    // Items - Buckets
     public final Supplier<Integer> woodenBucketCapacity;
+    public final Supplier<Boolean> woodenBucketCanPlaceSources;
+    public final Supplier<Integer> metalBucketCapacity;
+    public final Supplier<Boolean> metalBucketCanPlaceSources;
+
     // Mechanics - Heat
     public final Supplier<Double> deviceHeatingModifier;
     public final Supplier<Double> itemHeatingModifier;
@@ -220,12 +226,13 @@ public class ServerConfig extends BaseConfig
     public final Supplier<Double> naturalRegenerationModifier;
     public final Supplier<Integer> nutritionRotationHungerWindow;
     public final Supplier<Boolean> keepNutritionAfterDeath;
-    public final Supplier<Integer> foodDecayStackWindow;
+    public final Supplier<Integer> foodDecayStackTicks;
     public final Supplier<Double> foodDecayModifier;
     public final Supplier<Boolean> enableOverburdening;
     public final Supplier<Double> nutritionMinimumHealthModifier;
     public final Supplier<Double> nutritionDefaultHealthModifier;
     public final Supplier<Double> nutritionMaximumHealthModifier;
+    public final Supplier<Integer> maxIntoxicationTicks;
     // Mechanics - Food Traits
     public final Supplier<Double> traitSaltedModifier;
     public final Supplier<Double> traitBrinedModifier;
@@ -237,8 +244,6 @@ public class ServerConfig extends BaseConfig
     public final Supplier<Double> traitBurntToACrispModifier;
     public final Supplier<Double> traitWildModifier;
     public final Supplier<Double> traitCannedModifier;
-    // Mechanics - Fluids
-    public final Supplier<Boolean> enableBucketsPlacingSources;
     // Mechanics - Vanilla Changes
     public final Supplier<Boolean> enableVanillaBonemeal;
     public final Supplier<Boolean> enableVanillaSkeletonHorseSpawning;
@@ -484,22 +489,20 @@ public class ServerConfig extends BaseConfig
 
         builder.swap("saplings");
 
-        globalSaplingGrowthModifier = builder.comment("Modifier applied to the growth time of every (non-fruit) sapling. The modifier multiplies the ticks it takes to grow, so larger values cause longer growth times. For example, a value of 2 doubles the growth time.").define("globalSaplingGrowthModifier", 1d, 0d, Double.MAX_VALUE);
-        globalFruitSaplingGrowthModifier = builder.comment("Modifier applied to the growth time of every fruit tree sapling. The modifier multiplies the ticks it takes to grow, so larger values cause longer growth times. For example, a value of 2 doubles the growth time.").define("globalFruitSaplingGrowthModifier", 1d, 0d, Double.MAX_VALUE);
-
-        saplingGrowthDays = new EnumMap<>(Wood.class);
-        for (Wood wood : Wood.VALUES)
-        {
-            final String valueName = String.format("%sSaplingGrowthDays", wood.getSerializedName());
-            saplingGrowthDays.put(wood, builder.comment(String.format("Days for a %s tree sapling to be ready to grow into a full tree.", wood.getSerializedName())).define(valueName, wood.defaultDaysToGrow(), 0, Integer.MAX_VALUE));
-        }
-        fruitSaplingGrowthDays = new EnumMap<>(FruitBlocks.Tree.class);
-        for (FruitBlocks.Tree tree : FruitBlocks.Tree.values())
-        {
-            final String valueName = String.format("%sSaplingGrowthDays", tree.getSerializedName());
-            fruitSaplingGrowthDays.put(tree, builder.comment(String.format("Days for a %s tree sapling to be eligible to grow", tree.getSerializedName())).define(valueName, tree.defaultDaysToGrow(), 0, Integer.MAX_VALUE));
-        }
-        bananaSaplingGrowthDays = builder.comment("Days for a banana tree sapling to be eligible to grow").define("bananaSaplingGrowthDays", 6, 0, Integer.MAX_VALUE);
+        saplingGrowthModifier = builder
+            .comment(
+                "Modifier for how fast all saplings grow.",
+                "Larger values will cause slower growth"
+            ).define("saplingGrowthModifier", 1d, 0d, Double.MAX_VALUE);
+        saplingGrowthTicks = Helpers.mapOf(Wood.class, type -> builder
+            .comment("Ticks required before a %s sapling can grow into a tree".formatted(getUserFriendlyName(type)))
+            .define(getConfigName(type, "SaplingGrowthTicks"), type.defaultTicksToGrow(), 0, Integer.MAX_VALUE));
+        fruitSaplingGrowthTicks = Helpers.mapOf(FruitBlocks.Tree.class, type -> builder
+            .comment("Ticks required before a %s sapling can grow into a tree".formatted(getUserFriendlyName(type)))
+            .define(getConfigName(type, "SaplingGrowthTicks"), type.defaultTicksToGrow(), 0, Integer.MAX_VALUE));
+        bananaSaplingGrowthTicks = builder
+            .comment("Ticks required before a banana sapling can grow into a tree")
+            .define("bananaSaplingGrowthTicks", 6 * ICalendar.CALENDAR_TICKS_IN_DAY, 0, Integer.MAX_VALUE);
 
         builder.swap("crops");
 
@@ -555,8 +558,21 @@ public class ServerConfig extends BaseConfig
         olivineGlassBottleCapacity = builder.comment("Tank capacity of a olivine glass bottle (in mB).").define("olivineGlassBottleCapacity", 400, 0, FluidAlloy.MAX_ALLOY);
         olivineGlassBottleBreakChance = builder.comment("The chance a olivine glass bottle will break after drinking.").define("olivineGlassBottleBreakChance", 0.01, 0, 1);
 
-        builder.swap("woodenBucket");
-        woodenBucketCapacity = builder.comment("Tank capacity of a wooden bucket (in mB).").define("woodenBucketCapacity", 1000, 0, FluidAlloy.MAX_ALLOY);
+        builder.swap("buckets");
+
+        woodenBucketCapacity = builder
+            .comment("Tank capacity of a wooden bucket (in mB).")
+            .define("woodenBucketCapacity", FluidHelpers.BUCKET_VOLUME, 0, FluidAlloy.MAX_ALLOY);
+        woodenBucketCanPlaceSources = builder
+            .comment("If `true`, a wooden bucket can place source blocks")
+            .define("woodenBucketCanPlaceSources", false);
+
+        metalBucketCapacity = builder
+            .comment("Tank capacity of a metal (red and blue steel) bucket (in mB).")
+            .define("metalBucketCapacity", FluidHelpers.BUCKET_VOLUME, 0, FluidAlloy.MAX_ALLOY);
+        metalBucketCanPlaceSources = builder
+            .comment("If `true`, a metal (red and blue steel) bucket can place source blocks")
+            .define("metalBucketCanPlaceSources", false);
 
         builder.pop().swap("mechanics").push("heat");
 
@@ -600,9 +616,10 @@ public class ServerConfig extends BaseConfig
             "Player nutrition in TFC is calculated based on nutrition of the last few foods eaten - this is how many foods are used to calculate nutrition. By default, all TFC foods restore 4 hunger.").define("nutritionRotationHungerWindow", 80, 1, Integer.MAX_VALUE);
         keepNutritionAfterDeath = builder.comment(
             "If player's nutrition should be kept even after death. Hunger and thirst are not affected and will be reset.").define("keepNutritionAfterDeath", true);
-        foodDecayStackWindow = builder.comment(
-            "How many hours should different foods ignore when trying to stack together automatically?",
-            "Food made with different creation dates doesn't stack by default, unless it's within a specific window. This is the number of hours that different foods will try and stack together at the loss of a little extra expiry time.").define("foodDecayStackWindow", 6, 1, 100);
+        foodDecayStackTicks = builder.comment(
+            "How many ticks should different foods ignore when trying to stack together automatically?",
+            "Food made with different creation dates doesn't stack by default, unless it's within a specific window. This is the number of ticks that different foods will try and stack together at the loss of a little extra expiry time."
+        ).define("foodDecayStackTicks", 6 * ICalendar.CALENDAR_TICKS_IN_DAY, 1, Integer.MAX_VALUE);
         foodDecayModifier = builder.comment(
             "A multiplier for food decay, or expiration times. Larger values will result in naturally shorter expiration times.",
             "Setting this to zero will cause decay not to apply.",
@@ -616,6 +633,9 @@ public class ServerConfig extends BaseConfig
             "Nutrition below this value will linearly scale to the minimum multiplier."
         ).define("nutritionDefaultHealthModifier", 0.85, 0.001, 1000);
         nutritionMaximumHealthModifier = builder.comment("A multiplier for the maximum health that the player will obtain, based on their nutrition").define("nutritionMaximumHealthModifier", 3.0, 0.001, 1000);
+        maxIntoxicationTicks = builder
+            .comment("The maximum number of ticks that a player is allowed to be intoxicated for.")
+            .define("maxIntoxicationTicks", 36 * ICalendar.CALENDAR_TICKS_IN_DAY, 1000, Integer.MAX_VALUE);
 
         builder.swap("foodTraits");
 
@@ -629,10 +649,6 @@ public class ServerConfig extends BaseConfig
         traitBurntToACrispModifier = builder.comment("The modifier for the 'Burnt To A Crisp' food trait. Values less than 1 extend food lifetime, values greater than one decrease it. A value of zero stops decay.").define("traitBurntToACrispModifier", 2.5, 0, Double.MAX_VALUE);
         traitWildModifier = builder.comment("The modifier for the 'Wild' food trait. Values less than 1 extend food lifetime, values greater than one decrease it. A value of zero stops decay.").define("traitWildModifier", 0.5, 0, Double.MAX_VALUE);
         traitCannedModifier = builder.comment("The modifier for the 'Canned' food trait. Values less than 1 extend food lifetime, values greater than one decrease it. A value of zero stops decay.").define("traitCannedModifier", 0.00001, 0, Double.MAX_VALUE);
-
-        builder.swap("fluids");
-
-        enableBucketsPlacingSources = builder.comment("If true, TFC buckets that naturally place sources (colored steel) will place sources. If false, this behavior is disabled.").define("enableBucketsPlacingSources", true);
 
         builder.swap("vanillaChanges");
 
